# nyu-grounded-rgbd

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: experiment-runner.md  metrics-auditor.md  prompt-tuner.md
.claude/commands/: eval-only.md  full-run.md  new-experiment.md  smoke.md  test.md
.claude/rules/: algorithm.md  depth_refinement.md  nyu_metadata.md
.codex/: AGENTS.md  config.toml
.codex/agents/: docs-researcher.toml  explorer.toml  reviewer.toml
configs/dataset/: nyuv2_13.yaml  nyuv2_40.yaml
configs/experiment/: best_accuracy.yaml  dense_ov_rgbd_eval100.yaml  dense_ov_rgbd_eval50.yaml  dense_ov_rgbd_full.yaml  dense_ov_rgbd_smoke.yaml  dformerv2_b_pretrained_nyu40.yaml  esanet_pretrained_nyu40_fallback.yaml  week1_baseline.yaml  week2_clip.yaml  week2_clipbank.yaml  week2_combined.yaml  week2_lowthr.yaml  week2_planes.yaml  week2_prompts.yaml  week2_quickwins.yaml  week2_tuned.yaml  week2_wclip25.yaml  week2_wshift.yaml  week3_densefill.yaml
configs/model/: dense_ov_vith.yaml  gdino_base_hqsam.yaml  gdino_base_mobilesam.yaml  gdino_tiny_mobilesam.yaml  gdino_tiny_sam.yaml
configs/pipeline/: baseline.yaml  dense_ov_rgbd.yaml  depth_refine.yaml  (+10 more)
requirements/: base.txt  dev.txt
scripts/: _run_dformerv2_backend.py  _run_esanet_backend.py  make_qual_figure.py  make_table.py  prepare_nyuv2.py  prepare_supervised_nyuv2.py  run_eval.py  run_infer.py  run_supervised_infer.py
tests/: test_dense_ov.py  test_metrics.py  test_prepare_nyuv2.py  test_supervised_export.py
(+47 files in other folders)
