[project]
name = "nyu-grounded-rgbd"
version = "0.1.0"
description = "Zero-shot RGB-D semantic segmentation on NYUv2 with GroundingDINO + SAM"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
